end of day connor 2/20/24

--- a/html/organizations.html
+++ b/html/organizations.html
@@ -1,68 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-        
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252"><style>
+    <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+</head>
 
-table, th, td {
-    border:1px solid black;
-}
+<body>
 
-</style>
-
-        </head><body><a href="https://web.engr.oregonstate.edu/~chinnw/index.html"> 
-                Home
+    <nav>
+        <a href="https://web.engr.oregonstate.edu/~chinnw/index.html">Home</a>
+        &nbsp;
+        <a href="https://web.engr.oregonstate.edu/~chinnw/conference.html">Conferences
         </a>
         &nbsp;
-        <a href="https://web.engr.oregonstate.edu/~chinnw/papers.html">
-                Papers
-        </a>
+        <a href="https://web.engr.oregonstate.edu/~chinnw/papers.html">Papers</a>
         &nbsp;
-        <a href="https://web.engr.oregonstate.edu/~chinnw/conference.html">
-                Conferences         
-        </a>
+        <a href="https://web.engr.oregonstate.edu/~chinnw/authors.html">Authors</a>
         &nbsp;
-        <a href="https://web.engr.oregonstate.edu/~chinnw/authors.html">
-                Authors
-        </a>
+        <a href="https://web.engr.oregonstate.edu/~chinnw/organizations.html">Organizations</a>
         &nbsp;
-        <title>
-                Research Paper Tracker
-        </title>
-        &nbsp;
+    </nav>
 
+    <title>
+        Research Paper Tracker
+    </title>
+    &nbsp;
 
+    <h2>Orginizations</h2>
 
-<h2>Orginizations</h2>
+    <table style="width:100%">
+        <tbody>
+            <tr>
+                <th>Orginization ID</th>
+                <th>Name</th>
+                <th>Country</th>
+                <th>Is University</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Meta</td>
+                <td>USA</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Australian National University</td>
+                <td>Australia</td>
+                <td>1</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Synthesia</td>
+                <td>England</td>
+                <td>0</td>
+            </tr>
+        </tbody>
+    </table>
 
-<table style="width:100%">
-    <tbody><tr>
-        <th>Orginization ID</th>
-        <th>Name</th>
-        <th>Country</th>
-        <th>Is University</th>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>Meta</td>
-        <td>USA</td>
-        <td>0</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>Australian National University</td>
-        <td>Australia</td>
-        <td>1</td>
-    </tr>
-    <tr>
-        <td>3</td>
-        <td>Synthesia</td>
-        <td>England</td>
-        <td>0</td>
-    </tr>
-</tbody></table>
-
-
-
-
-</body></html>
+</body>
+</html>
