--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-    <style>#hed1{text-align:center;}</style>
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
 </head>
 
 <body>
