fixed tabs, spacing

--- a/html/organizations.html
+++ b/html/organizations.html
@@ -2,21 +2,26 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+    <style>
+        table, th, td {
+            border:1px solid black;
+        }
+    </style>
 </head>
 
 <body>
 
     <nav>
-        <a href="https://web.engr.oregonstate.edu/~chinnw/index.html">Home</a>
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/index.html">Home</a>
         &nbsp;
-        <a href="https://web.engr.oregonstate.edu/~chinnw/conference.html">Conferences
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/conferences.html">Conferences
         </a>
         &nbsp;
-        <a href="https://web.engr.oregonstate.edu/~chinnw/papers.html">Papers</a>
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/papers.html">Papers</a>
         &nbsp;
-        <a href="https://web.engr.oregonstate.edu/~chinnw/authors.html">Authors</a>
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/authors.html">Authors</a>
         &nbsp;
-        <a href="https://web.engr.oregonstate.edu/~chinnw/organizations.html">Organizations</a>
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/organizations.html">Organizations</a>
         &nbsp;
     </nav>
 
@@ -25,7 +30,7 @@
     </title>
     &nbsp;
 
-    <h2>Orginizations</h2>
+    <h2>Organizations</h2>
 
     <table style="width:100%">
         <tbody>
