--- a/html/authors.html
+++ b/html/authors.html
@@ -1,102 +1,103 @@
 <!DOCTYPE html>
-<html data-lt-installed="true"><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"><style>
-table, th, td {
-    border:1px solid black;
-}
-</style>
+<html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+    <style>
+        table, th, td {
+            border:1px solid black;
+        }
+    </style>
+</head>
 
-        </head><body><a href="https://web.engr.oregonstate.edu/~chinnw/index.html"> 
-                Home
+<body>
+    
+    <nav>
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/index.html">Home</a>
+        &nbsp;
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/conferences.html">Conferences
         </a>
         &nbsp;
-        <a href="https://web.engr.oregonstate.edu/~chinnw/papers.html">
-                Papers
-        </a>
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/papers.html">Papers</a>
         &nbsp;
-        <a href="https://web.engr.oregonstate.edu/~chinnw/conference.html">
-                Conferences         
-        </a>
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/authors.html">Authors</a>
         &nbsp;
-        <a href="https://web.engr.oregonstate.edu/~chinnw/orginizations.html">
-                Orginizations
-        </a>
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/organizations.html">Organizations</a>
         &nbsp;
-        <title>
-                Research Paper Tracker
-        </title>
-        &nbsp;
+    </nav>
 
+    <title>
+        Research Paper Tracker
+    </title>
 
+    <h2>Authors</h2>
 
-<h2>Authors</h2>
+    <table style="width:100%">
+        <tbody>
+            <tr>
+                <th>Author ID</th>
+                <th>First Name</th>
+                <th>Middle Name</th>
+                <th>Last Name</th>
+                <th>Email</th>
+                <th>Website Url</th>
+                <th>Is Retired</th> 
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>George</td>
+                <td>NULL</td>
+                <td>Simecek</td>
+                <td>gsimecek@gmail.com</td>
+                <td>NULL</td>
+                <td>NULL</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Aaron</td>
+                <td>NULL</td>
+                <td>Defazio</td>
+                <td>aaron.defazio@gmail.com</td>
+                <td>https://www.aarondefazio.com/</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Konstantin</td>
+                <td>Casadeen</td>
+                <td>Mishchenko</td>
+                <td>konsta.mish@gmail.com</td>
+                <td>https://www.konstmish.com/</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Joar</td>
+                <td>NULL</td>
+                <td>Skalse</td>
+                <td>joar.skalse@cs.ox.ac.uk</td>
+                <td>https://www.fhi.ox.ac.uk/team/joar-skalse/</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>John</td>
+                <td>NULL</td>
+                <td>Kircgenbauer</td>
+                <td>NULL</td>
+                <td>NULL</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>Rylan</td>
+                <td>NULL</td>
+                <td>Schaeffer</td>
+                <td>NULL</td>
+                <td>NULL</td>
+                <td>0</td>
+            </tr>
+        </tbody>
+    </table>
 
-<table style="width:100%">
-    <tbody><tr>
-        <th>Author ID</th>
-        <th>First Name</th>
-        <th>Middle Name</th>
-        <th>Last Name</th>
-        <th>Email</th>
-        <th>Website Url</th>
-        <th>Is Retired</th> 
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>George</td>
-        <td>NULL</td>
-        <td>Simecek</td>
-        <td>gsimecek@gmail.com</td>
-        <td>NULL</td>
-        <td>NULL</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>Aaron</td>
-        <td>NULL</td>
-        <td>Defazio</td>
-        <td>aaron.defazio@gmail.com</td>
-        <td>https://www.aarondefazio.com/</td>
-        <td>0</td>
-    </tr>
-    <tr>
-        <td>3</td>
-        <td>Konstantin</td>
-        <td>Casadeen</td>
-        <td>Mishchenko</td>
-        <td>konsta.mish@gmail.com</td>
-        <td>https://www.konstmish.com/</td>
-        <td>0</td>
-    </tr>
-    <tr>
-        <td>4</td>
-        <td>Joar</td>
-        <td>NULL</td>
-        <td>Skalse</td>
-        <td>joar.skalse@cs.ox.ac.uk</td>
-        <td>https://www.fhi.ox.ac.uk/team/joar-skalse/</td>
-        <td>0</td>
-    </tr>
-    <tr>
-        <td>5</td>
-        <td>John</td>
-        <td>NULL</td>
-        <td>Kircgenbauer</td>
-        <td>NULL</td>
-        <td>NULL</td>
-        <td>0</td>
-    </tr>
-    <tr>
-        <td>6</td>
-        <td>Rylan</td>
-        <td>NULL</td>
-        <td>Schaeffer</td>
-        <td>NULL</td>
-        <td>NULL</td>
-        <td>0</td>
-    </tr>
-</tbody></table>
-
-
-
-
-</body></html>
+</body>
+</html>
