--- a/html/conferences.html
+++ b/html/conferences.html
@@ -1,71 +1,72 @@
 <!DOCTYPE html>
-<html data-lt-installed="true"><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"><style>
-table, th, td {
-    border:1px solid black;
-}
-</style>
+<html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+    <style>
+        table, th, td {
+            border:1px solid black;
+        }
+    </style>
+</head>
 
-        </head><body><a href="https://web.engr.oregonstate.edu/~chinnw/index.html"> 
-                Home
+<body>
+
+    <nav>
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/index.html">Home</a>
+        &nbsp;
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/conferences.html">Conferences
         </a>
         &nbsp;
-        <a href="https://web.engr.oregonstate.edu/~chinnw/papers.html">
-                Papers
-        </a>
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/papers.html">Papers</a>
         &nbsp;
-        <a href="https://web.engr.oregonstate.edu/~chinnw/authors.html">
-                Authors         
-        </a>
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/authors.html">Authors</a>
         &nbsp;
-        <a href="https://web.engr.oregonstate.edu/~chinnw/orginizations.html">
-                Orginizations
-        </a>
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/organizations.html">Organizations</a>
         &nbsp;
-        <title>
-                Research Paper Tracker
-        </title>
-        &nbsp;
+    </nav>
 
+    <title>
+            Research Paper Tracker
+    </title>
 
+    <h2>Conferences</h2>
 
-<h2>Conferences</h2>
+    <table style="width:100%">
+        <tbody>
+            <tr>
+                <th>Conference ID</th>
+                <th>Name</th>
+                <th>Year</th>
+                <th>City</th>
+                <th>Country</th>
+                <th>Is Online</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>International Conference on Machine Learning</td>
+                <td>2023</td>
+                <td>Honolulu</td>
+                <td>USA</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>NeurIPS</td>
+                <td>2023</td>
+                <td>New Orleans</td>
+                <td>USA</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Association for the Advancement of Artificial Intelligence</td>
+                <td>2023</td>
+                <td>Washington, DC</td>
+                <td>USA</td>
+                <td>0</td>
+            </tr>
+        </tbody>
+    </table>
 
-<table style="width:100%">
-    <tbody><tr>
-        <th>Conference ID</th>
-        <th>Name</th>
-        <th>Year</th>
-        <th>City</th>
-        <th>Country</th>
-        <th>Is Online</th>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>International Conference on Machine Learning</td>
-        <td>2023</td>
-        <td>Honolulu</td>
-        <td>USA</td>
-        <td>0</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>NeurIPS</td>
-        <td>2023</td>
-        <td>New Orleans</td>
-        <td>USA</td>
-        <td>0</td>
-    </tr>
-    <tr>
-        <td>3</td>
-        <td>Association for the Advancement of Artificial Intelligence</td>
-        <td>2023</td>
-        <td>Washington, DC</td>
-        <td>USA</td>
-        <td>0</td>
-    </tr>
-</tbody></table>
-
-
-
-
-</body></html>
+</body>
+</html>
