--- a/html/index.html
+++ b/html/index.html
@@ -8,16 +8,16 @@
 <body>
     
     <nav>
-        <a href="https://web.engr.oregonstate.edu/~chinnw/index.html">Home</a>
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/index.html">Home</a>
         &nbsp;
-        <a href="https://web.engr.oregonstate.edu/~chinnw/conference.html">Conferences
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/conferences.html">Conferences
         </a>
         &nbsp;
-        <a href="https://web.engr.oregonstate.edu/~chinnw/papers.html">Papers</a>
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/papers.html">Papers</a>
         &nbsp;
-        <a href="https://web.engr.oregonstate.edu/~chinnw/authors.html">Authors</a>
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/authors.html">Authors</a>
         &nbsp;
-        <a href="https://web.engr.oregonstate.edu/~chinnw/organizations.html">Organizations</a>
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/organizations.html">Organizations</a>
         &nbsp;
     </nav>
 
