--- a/html/papers.html
+++ b/html/papers.html
@@ -1,81 +1,82 @@
 <!DOCTYPE html>
-<html data-lt-installed="true"><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"><style>
-table, th, td {
-    border:1px solid black;
-}
-</style>
+<html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+    <style>
+        table, th, td {
+            border:1px solid black;
+        }
+    </style>
+</head>
+    
+<body>
 
-        </head><body><a href="https://web.engr.oregonstate.edu/~chinnw/index.html"> 
-                Home
+    <nav>
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/index.html">Home</a>
+        &nbsp;
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/conferences.html">Conferences
         </a>
         &nbsp;
-        <a href="https://web.engr.oregonstate.edu/~chinnw/orginizations.html">
-                Orginizations
-        </a>
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/papers.html">Papers</a>
         &nbsp;
-        <a href="https://web.engr.oregonstate.edu/~chinnw/conference.html">
-                Conferences         
-        </a>
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/authors.html">Authors</a>
         &nbsp;
-        <a href="https://web.engr.oregonstate.edu/~chinnw/authors.html">
-                Authors
-        </a>
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/organizations.html">Organizations</a>
         &nbsp;
-        <title>
-                Research Paper Tracker
-        </title>
-        &nbsp;
+    </nav>
 
+    <title>
+            Research Paper Tracker
+    </title>
 
+    <h2>Papers</h2>
 
-<h2>Papers</h2>
+    <table style="width:100%">
+        <tbody>
+            <tr>
+                <th>Paper ID</th>
+                <th>Title</th>
+                <th>Year Published</th>
+                <th>Number of Citations</th>
+                <th>Conference ID</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>"Learning-Rate-Free Learning by D-Adaptation"</td>
+                <td>2023</td>
+                <td>25</td>
+                <td>1</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>"A Watermark for Large Language Models"</td>
+                <td>2023</td>
+                <td>206</td>
+                <td>1</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>"Are Emergent Abilities of Large Language Models a Mirage?"</td>
+                <td>2023</td>
+                <td>81</td>
+                <td>2</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>"SAGA: A Fast Incremental Gradient Method With Support for Non-Strongly Convex Composite Objectives"</td>
+                <td>2014</td>
+                <td>2022</td>
+                <td>NULL</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>"Misspecification in Inverse Reinforcement Learning"</td>
+                <td>2023</td>
+                <td>11</td>
+                <td>3</td>
+            </tr>
+        </tbody>
+    </table>
 
-<table style="width:100%">
-    <tbody><tr>
-        <th>Paper ID</th>
-        <th>Title</th>
-        <th>Year Published</th>
-        <th>Number of Citations</th>
-        <th>Conference ID</th>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>"Learning-Rate-Free Learning by D-Adaptation"</td>
-        <td>2023</td>
-        <td>25</td>
-        <td>1</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>"A Watermark for Large Language Models"</td>
-        <td>2023</td>
-        <td>206</td>
-        <td>1</td>
-    </tr>
-    <tr>
-        <td>3</td>
-        <td>"Are Emergent Abilities of Large Language Models a Mirage?"</td>
-        <td>2023</td>
-        <td>81</td>
-        <td>2</td>
-    </tr>
-    <tr>
-        <td>4</td>
-        <td>"SAGA: A Fast Incremental Gradient Method With Support for Non-Strongly Convex Composite Objectives"</td>
-        <td>2014</td>
-        <td>2022</td>
-        <td>NULL</td>
-    </tr>
-    <tr>
-        <td>5</td>
-        <td>"Misspecification in Inverse Reinforcement Learning"</td>
-        <td>2023</td>
-        <td>11</td>
-        <td>3</td>
-    </tr>
-</tbody></table>
-
-
-
-
-</body></html>
+</body>
+</html>
