added intersection tables

--- a/html/authors.html
+++ b/html/authors.html
@@ -21,7 +21,11 @@
         &nbsp;
         <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/authors.html">Authors</a>
         &nbsp;
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/paperAuthors.html">Paper Authors</a>
+        &nbsp;
         <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/organizations.html">Organizations</a>
+        &nbsp;
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/authorOrganizations.html">Author Organizations</a>
         &nbsp;
     </nav>
 
