--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
 </head>
 
 <body>
@@ -17,7 +16,11 @@
         &nbsp;
         <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/authors.html">Authors</a>
         &nbsp;
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/paperAuthors.html">Paper Authors</a>
+        &nbsp;
         <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/organizations.html">Organizations</a>
+        &nbsp;
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/authorOrganizations.html">Author Organizations</a>
         &nbsp;
     </nav>
 
