--- a/html/paperAuthors.html
+++ b/html/paperAuthors.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+    
     <nav>
         <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/index.html">Home</a>
         &nbsp;
@@ -32,35 +32,38 @@
     <title>
         Research Paper Tracker
     </title>
-    &nbsp;
 
-    <h2>Organizations</h2>
+    <h2>Paper Authors</h2>
 
     <table style="width:100%">
         <tbody>
             <tr>
-                <th>Orginization ID</th>
-                <th>Name</th>
-                <th>Country</th>
-                <th>Is University</th>
+                <th>Paper ID</th>
+                <th>Author ID</th>
             </tr>
             <tr>
                 <td>1</td>
-                <td>Meta</td>
-                <td>USA</td>
-                <td>0</td>
+                <td>2</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>2</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>4</td>
             </tr>
             <tr>
                 <td>2</td>
-                <td>Australian National University</td>
-                <td>Australia</td>
-                <td>1</td>
+                <td>5</td>
             </tr>
             <tr>
                 <td>3</td>
-                <td>Synthesia</td>
-                <td>England</td>
-                <td>0</td>
+                <td>6</td>
             </tr>
         </tbody>
     </table>
