--- a/html/authorOrganizations.html
+++ b/html/authorOrganizations.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+    
     <nav>
         <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/index.html">Home</a>
         &nbsp;
@@ -32,35 +32,38 @@
     <title>
         Research Paper Tracker
     </title>
-    &nbsp;
 
-    <h2>Organizations</h2>
+    <h2>Author Organizations</h2>
 
     <table style="width:100%">
         <tbody>
             <tr>
-                <th>Orginization ID</th>
-                <th>Name</th>
-                <th>Country</th>
-                <th>Is University</th>
+                <th>organizationsAuthorID</th>
+                <th>organizationID</th>
+                <th>authorID</th>
+                <th>authorStartDate</th>
+                <th>authorEndDate</th>
             </tr>
             <tr>
                 <td>1</td>
-                <td>Meta</td>
-                <td>USA</td>
-                <td>0</td>
+                <td>1</td>
+                <td>2</td>
+                <td>2010-01-01</td>
+                <td>2012-06-01</td>
             </tr>
             <tr>
                 <td>2</td>
-                <td>Australian National University</td>
-                <td>Australia</td>
-                <td>1</td>
+                <td>2</td>
+                <td>2</td>
+                <td>2015-05-01</td>
+                <td>2022-09-01</td>
             </tr>
             <tr>
                 <td>3</td>
-                <td>Synthesia</td>
-                <td>England</td>
-                <td>0</td>
+                <td>2</td>
+                <td>3</td>
+                <td>2017-03-18</td>
+                <td>2023-01-27</td>
             </tr>
         </tbody>
     </table>
