added insert for each table

--- a/html/authorOrganizations.html
+++ b/html/authorOrganizations.html
@@ -68,5 +68,30 @@
         </tbody>
     </table>
 
+    <br>
+    <article>
+        <form id="addAuthorOrganization">
+            <fieldset>
+                <legend>Add Author Organization</legend>
+                <label>Author Organization ID</label>
+                <input type="text" name="authorOrganizationID">
+                <br>
+                <label>Organization ID</label>
+                <input type="text" name="organizationID">
+                <br>
+                <label>Author ID</label>
+                <input type="text" name="authorID">
+                <br>
+                <label>Author Start Date</label>
+                <input type="text" name="authorStartDate">
+                <br>
+                <label>Author End Date</label>
+                <input type="text" name="authorEndDate">
+                <br>
+                <button type="submit">Add Author Organization</button>
+            </fieldset>
+        </form>
+    </article>
+
 </body>
 </html>
