--- a/html/authors.html
+++ b/html/authors.html
@@ -103,5 +103,36 @@
         </tbody>
     </table>
 
+    <br>
+    <article>
+        <form id="addAuthor">
+            <fieldset>
+                <legend>Add Author</legend>
+                <label>Author ID</label>
+                <input type="text" name="authorID">
+                <br>
+                <label>First Name</label>
+                <input type="text" name="firstName">
+                <br>
+                <label>Middle Name</label>
+                <input type="text" name="middleName">
+                <br>
+                <label>Last Name</label>
+                <input type="text" name="lastName">
+                <br>
+                <label>Email</label>
+                <input type="text" name="email">
+                <br>
+                <label>Website URL</label>
+                <input type="text" name="websiteURL">
+                <br>
+                <label>Is this author Retired?</label>
+                <input type="text" name="isRetired">
+                <br>
+                <button type="submit">Add Author</button>
+            </fieldset>
+        </form>
+    </article>
+
 </body>
 </html>
