--- a/html/organizations.html
+++ b/html/organizations.html
@@ -65,5 +65,27 @@
         </tbody>
     </table>
 
+    <br>
+    <article>
+        <form id="addOrganization">
+            <fieldset>
+                <legend>Add Organization</legend>
+                <label>Organization ID</label>
+                <input type="text" name="organizationID">
+                <br>
+                <label>Organization Name</label>
+                <input type="text" name="organizationName">
+                <br>
+                <label>Country</label>
+                <input type="text" name="country">
+                <br>
+                <label>Is this organization a University?</label>
+                <input type="text" name="isUniversity">
+                <br>
+                <button type="submit">Add Organization</button>
+            </fieldset>
+        </form>
+    </article>
+
 </body>
 </html>
