--- a/html/paperAuthors.html
+++ b/html/paperAuthors.html
@@ -68,5 +68,20 @@
         </tbody>
     </table>
 
+    <br>
+    <article>
+        <form id="addPaperAuthor">
+            <fieldset>
+                <legend>Add Paper Author</legend>
+                <label>Paper ID</label>
+                <input type="text" name="paperID">
+                <br>
+                <label>Author ID</label>
+                <input type="text" name="authorID">
+                <br>
+                <button type="submit">Add Author</button>
+            </fieldset>
+        </form>
+
 </body>
 </html>
