--- a/html/papers.html
+++ b/html/papers.html
@@ -82,5 +82,30 @@
         </tbody>
     </table>
 
+    <br>
+    <article>
+        <form id="addPaper">
+            <fieldset>
+                <legend>Add Paper</legend>
+                <label>Paper ID</label>
+                <input type="text" name="paperID">
+                <br>
+                <label>Paper Title</label>
+                <input type="text" name="paperTitle">
+                <br>
+                <label>Year Published</label>
+                <input type="text" name="yearPublished">
+                <br>
+                <label>Number of Citations</label>
+                <input type="text" name="numCitations">
+                <br>
+                <label>Conference ID</label>
+                <input type="text" name="conferenceID">
+                <br>
+                <button type="submit">Add Paper</button>
+            </fieldset>
+        </form>
+    </article>
+
 </body>
 </html>
