--- a/html/authors.html
+++ b/html/authors.html
@@ -127,7 +127,11 @@
                 <input type="text" name="websiteURL">
                 <br>
                 <label>Is this author Retired?</label>
-                <input type="text" name="isRetired">
+                <input list="isRetired">
+                <datalist id="isRetired">
+                    <option value="Yes">
+                    <option value="No">
+                </datalist>
                 <br>
                 <button type="submit">Add Author</button>
             </fieldset>
