--- a/html/organizations.html
+++ b/html/organizations.html
@@ -80,7 +80,11 @@
                 <input type="text" name="country">
                 <br>
                 <label>Is this organization a University?</label>
-                <input type="text" name="isUniversity">
+                <input list="isUniversity">
+                <datalist id="isUniversity">
+                    <option value="Yes">
+                    <option value="No">
+                </datalist>
                 <br>
                 <button type="submit">Add Organization</button>
             </fieldset>
