--- a/html/authorOrganizations.html
+++ b/html/authorOrganizations.html
@@ -12,8 +12,6 @@
 <body>
     
     <nav>
-        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/index.html">Home</a>
-        &nbsp;
         <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/conferences.html">Conferences
         </a>
         &nbsp;
@@ -35,38 +33,40 @@
 
     <h2>Author Organizations</h2>
 
-    <table style="width:100%">
-        <tbody>
-            <tr>
-                <th>organizationsAuthorID</th>
-                <th>organizationID</th>
-                <th>authorID</th>
-                <th>authorStartDate</th>
-                <th>authorEndDate</th>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>1</td>
-                <td>2</td>
-                <td>2010-01-01</td>
-                <td>2012-06-01</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>2</td>
-                <td>2</td>
-                <td>2015-05-01</td>
-                <td>2022-09-01</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>2</td>
-                <td>3</td>
-                <td>2017-03-18</td>
-                <td>2023-01-27</td>
-            </tr>
-        </tbody>
-    </table>
+    <article>
+        <table style="width:100%">
+            <tbody>
+                <tr>
+                    <th>organizationsAuthorID</th>
+                    <th>organizationID</th>
+                    <th>authorID</th>
+                    <th>authorStartDate</th>
+                    <th>authorEndDate</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>2010-01-01</td>
+                    <td>2012-06-01</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>2</td>
+                    <td>2</td>
+                    <td>2015-05-01</td>
+                    <td>2022-09-01</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>2017-03-18</td>
+                    <td>2023-01-27</td>
+                </tr>
+            </tbody>
+        </table>
+    </article>
 
     <br>
     <article>
