--- a/html/papers.html
+++ b/html/papers.html
@@ -12,6 +12,9 @@
 <body>
 
     <nav>
+        <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/index.html">Home
+        </a>
+        &nbsp;
         <a href="https://web.engr.oregonstate.edu/~dilgrenc/academic_paper_database/html/conferences.html">Conferences
         </a>
         &nbsp;
